Add HTML form and input for first name.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     </head>
 <body>
     <h1>Salary Calculator</h1>
+    <form onSubmit="submitEmployee(event)">
+        <input type="text" id="first-name">
+        <button>
+            Submit
+        </button>
 
+
+    </form>
 
 </body>
 
