--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Salary Calculator</title>
         <link rel="stylesheet" href="./style.css">
-        <script src="./client.js"></script>
+        <script src="./client.js" defer></script>
     </head>
 <body>
     <h1>Salary Calculator</h1>
@@ -13,7 +13,17 @@
         <button>
             Submit
         </button>
+    <table>
+        <thead>
+            <tr>
+                <th>First Name</th>
+            </tr>
+        </thead>
 
+        <tbody id="employee-info">
+
+        </tbody>
+    </table>
 
     </form>
 
