Add input for salary and append to DOM.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Salary Calculator</h1>
     <form onSubmit="submitEmployee(event)">
-        <input type="text" id="first-name">
+        <input type="text" placeholder="First name" id="first-name">
+        <input type="text" placeholder="Salary" id="annual-salary">
         <button>
             Submit
         </button>
