Adjusted input field size.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1>Salary Calculator</h1>
     <h3>Add Employee</h3>
     <form onSubmit="submitEmployee(event)">
-        <input type="text" placeholder="First name" id="first-name">
-        <input type="text" placeholder="Last name" id="last-name">
-        <input type="text" placeholder="ID" id="id-number">
-        <input type="text" placeholder="Title" id="job-title">
-        <input type="text" placeholder="Salary" id="annual-salary">
+        <input type="text" placeholder="First name" size="14" id="first-name">
+        <input type="text" placeholder="Last name" size="14" id="last-name">
+        <input type="text" placeholder="ID" size="5" id="id-number">
+        <input type="text" placeholder="Title" size="18" id="job-title">
+        <input type="text" placeholder="Salary" size="8" id="annual-salary">
         <button>
             Submit
         </button>
