--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Salary Calculator</title>
         <link rel="stylesheet" href="./style.css">
+        <script src="./employees.js" defer></script>
         <script src="./client.js" defer></script>
     </head>
 <body>
