Format currency correctly and add confirmation box for deletion.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Salary Calculator</h1>
     <h3>Add Employee</h3>
-    <form onSubmit="submitEmployee(event)">
+    <form class="input-form" onSubmit="submitEmployee(event)">
         <input type="text" placeholder="First name" size="14" id="first-name">
         <input type="text" placeholder="Last name" size="14" id="last-name">
         <input type="text" placeholder="ID" size="5" id="id-number">
