Stretch goal subtracting employee salary when deleted.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <th>Last Name</th>
                 <th>ID</th>
                 <th>Title</th>
-                <th>Annual Salary</th>
+                <th class="salary">Annual Salary</th>
                 <th></th>
             </tr>
         </thead>
