--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="./client.js" defer></script>
     </head>
 <body>
-    <h1>Salary Calculator</h1>
+    <h1>Welcome to the Initech Employee Salary Calculator!</h1>
     <h3>Add Employee</h3>
     <form class="input-form" onSubmit="submitEmployee(event)">
         <input type="text" placeholder="First name" size="14" id="first-name">
