--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h1>Welcome to the Initech Employee Salary Calculator!</h1>
     <h3>Add Employee</h3>
     <form class="input-form" onSubmit="submitEmployee(event)">
-        <input type="text" placeholder="First name" size="14" id="first-name">
-        <input type="text" placeholder="Last name" size="14" id="last-name">
-        <input type="text" placeholder="ID" size="5" min="0" id="id-number">
-        <input type="text" placeholder="Title" size="18" id="job-title">
-        <input type="number" placeholder="Salary" size="8" min="0" id="annual-salary">
+        <input required type="text" placeholder="First name" size="14" id="first-name">
+        <input required type="text" placeholder="Last name" size="14" id="last-name">
+        <input required type="text" placeholder="ID" size="5" min="0" id="id-number">
+        <input required type="text" placeholder="Title" size="18" id="job-title">
+        <input required type="number" placeholder="Salary" size="8" min="0" id="annual-salary">
         <button>
             Submit
         </button>
