Set up localhost for the calculator files.

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Salary Calculator</title>
-        <link rel="stylesheet" href="./style.css">
-        <script src="./employees.js" defer></script>
-        <script src="./client.js" defer></script>
+        <link rel="stylesheet" href="./style/style.css">
+        <!-- <script src="../employees.js" defer></script> -->
+        <script src="./scripts/client.js" defer></script>
     </head>
 <body>
     <h1>Welcome to the Initech Employee Salary Calculator!</h1>
