--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Salary Calculator</title>
         <link rel="stylesheet" href="./style/style.css">
-        <!-- <script src="../employees.js" defer></script> -->
+        <script src="./scripts/employees.js" defer></script>
         <script src="./scripts/client.js" defer></script>
     </head>
 <body>
